# yt-dlp-api

./: .env.example  .gitignore  README.md  async_client.py  client.py  download_worker.py  main.py  pyproject.toml
scripts/: install-systemd.sh  uninstall-systemd.sh  yt-dlp-api.service
