[project]
name = "yt-dlp-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.27",
    "fastapi>=0.115.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "yt-dlp>=2024.12.0",
    "yt-dlp-ejs>=0.3.2",
]
